# PhysicsBasedModeling-Demos

Finite-Element-Tests/: CMakeLists.txt
Finite-Element-Tests/tests/Demo3D/: CMakeLists.txt
Finite-Element-Tests/tests/MembranePinch1/: CMakeLists.txt
Finite-Element-Tests/tests/MembranePinch2/: CMakeLists.txt
Finite-Element-Tests/tests/MembranePinch3/: CMakeLists.txt
Finite-Element-Tests/tests/MembranePinch4/: CMakeLists.txt
Finite-Element-Tests/tests/MembranePinch5/: CMakeLists.txt  FiniteElementMesh.h
Finite-Element-Tests/tests/MembranePinch6/: CGVectorWrapper.h  CMakeLists.txt
Finite-Element-Tests/tests/MembraneStretch1/: CMakeLists.txt  FiniteElementMesh.h
Finite-Element-Tests/tests/MembraneStretch2/: CMakeLists.txt  FiniteElementMesh.h
Finite-Element-Tests/tests/MembraneStretch3/: CMakeLists.txt
Simple-Deformations/: CMakeLists.txt
Simple-Deformations/tests/latticeMesh/: CMakeLists.txt
Simple-Deformations/tests/latticeMeshBoundary/: CMakeLists.txt
Simple-Deformations/tests/latticeMeshBoundaryRelaxation/: CMakeLists.txt
Simple-Deformations/tests/latticeMeshElasticityTest1/: CMakeLists.txt
Simple-Deformations/tests/latticeMeshElasticityTest2/: CMakeLists.txt
Simple-Deformations/tests/latticeMeshElasticityTest3/: CMakeLists.txt
Simple-Deformations/tests/latticeMeshElasticityTest4/: CMakeLists.txt  main.cpp
Simple-Deformations/tests/quadFacedCube/: CMakeLists.txt
USD-Tests/: CMakeLists.txt
USD-Tests/tests/USDtoOBJ/: CMakeLists.txt
USD-Tests/tests/animateAttribute/: CMakeLists.txt
USD-Tests/tests/helloWorld/: CMakeLists.txt
